Update footer URL

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Made with &#10084; by <a href="https://wdmoin.github.io/" target="_blank">Moin</a>
+                        <p>Made with &#10084; by <a href="https://www.moinulislam.dev/" target="_blank">Moin</a></p>
                     </p>
                 </div>
                 <div class="col-md-6">
